--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "moment": "^2.24.0",
-    "nuxt": "^2.0.0",
-    "vue-cookies": "^1.5.13"
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
