--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "cookie-universal-nuxt": "^2.0.17",
+    "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "nuxt": "^2.0.0",
     "vuex-persistedstate": "^2.5.4"
